<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/insertEmail"
            android:layout_margin="10dp"
            android:autofillHints="@string/insertEmail" />
        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/insertPassword"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:autofillHints="@string/insertPassword" />

        <TextView
            android:id="@+id/switchLoginToRegisterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToRegister"
            android:gravity="center"
            android:pointerIcon="hand"
            android:layout_margin="6dp"/>

        <Button
            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </LinearLayout>

</FrameLayout>