<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!--creo ScrollView-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-127dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/B_mainspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mainSpace"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_aspiraz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aspiraz"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_dae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dae"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_backpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/backpack"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_childpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/childPack"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/misc"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_dpi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DPI"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_trauma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trauma"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_frontspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/frontSpace"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>
        </LinearLayout>



    </ScrollView>

    <!-- definisco il tasto indietro-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Press Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

