<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ButtonsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ButtonsFragment">



    <!-- defintion of the ScrollView-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-127dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/B_mainspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/mainSpace"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mainSpaceFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/B_aspiraz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aspiraz"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/AspirationFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/B_dae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dae"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/DaeFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>


            <Button
                android:id="@+id/B_backpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/backpack"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/BackpackFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>


            <Button
                android:id="@+id/B_childpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/childPack"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/ChildpackFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/B_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/misc"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/MiscFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/B_dpi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DPI"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/DpiFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/B_trauma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trauma"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/TraumaFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/B_frontspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/frontSpace"
                android:background="@drawable/roundedbutton"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/button_bottom_padding"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/FrontspaceFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </LinearLayout>



    </ScrollView>
</FrameLayout>