<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AspirationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AspirationFragment">



    <!-- definisco i bottoni ->

    <!- creo ScrollView-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-127dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/B_mainspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mainSpace"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_aspiraz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aspiraz"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <TableRow>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:text="aspiratore"/>
                    <EditText
                        android:id="@+id/aspiratore"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:text="raccordo conico"/>
                    <EditText
                        android:id="@+id/raccordo_conico"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:text="sacchetti monouso"/>
                    <EditText
                        android:id="@+id/sacchetti_monouso"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:text="tubo di raccordo"/>
                    <EditText
                        android:id="@+id/raccordo"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/B_dae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dae"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_backpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/backpack"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_childpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/childPack"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/misc"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_dpi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DPI"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_trauma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trauma"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>

            <Button
                android:id="@+id/B_frontspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/frontSpace"
                android:background="@color/red"
                android:textColor="@android:color/black"
                android:layout_marginBottom="0.5dp"/>
        </LinearLayout>



    </ScrollView>
</FrameLayout>